# bis-lab-4

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  main.cpp
